# dj-store

./: .dockerignore  .env  .env.dev  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.aarch64  LICENSE  README.md  db.sqlite
.github/: codecov.yml
.github/workflows/: docker.yml  rust.yml  svelte.yml
api-macro/: Cargo.toml  expanded.rs
api-macro/src/: lib.rs
entity/: Cargo.toml
entity/src/: lib.rs  music.rs  prelude.rs  vote.rs
entity/src/entities/: mod.rs  music.rs  prelude.rs  room.rs  vote.rs
migration/: .env  Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
public/: _redirects
src/: api.rs  build.rs  main.rs  model.rs  ui.rs  utils.rs
src/api/: admin.rs  mod.rs  room.rs  room_id.rs  search.rs  state.rs  test.rs  websocket.rs
src/utils/: cors.rs  https.rs  jwt.rs  lastfm.rs  mod.rs  room_id.rs
ui/: .eslintrc.cjs  .gitignore  README.md  package.json  svelte.config.js  tailwind.config.cjs
ui/src/: app.css  app.d.ts  app.html
ui/src/lib/: AudioPlayPause.svelte  Button.svelte  Dropdown.svelte  Hero.svelte  Menu.svelte  Modal.svelte  MusicCard.svelte  MusicTile.svelte  NavBar.svelte  PassCode.svelte  QrCodePopup.svelte  RoomTile.svelte  Scanner.svelte  ScannerBorders.svelte  Search.svelte  Spinner.svelte  Stack.svelte  Table.svelte  TextInput.svelte  auth.ts  client.ts  env.ts  types.ts  utils.ts
ui/src/lib/components/: AudioPlayPause.svelte  Button.svelte  Dropdown.svelte  Hero.svelte  MusicTile.svelte  PassCode.svelte  QrCodePopup.svelte  RoomTile.svelte  Scanner.svelte  ScannerBorders.svelte  Search.svelte  Table.svelte  TextInput.svelte
ui/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts  Button.svelte  CodeInput.svelte  Loader.svelte  PassCode.svelte
ui/src/routes/[code]/: +page.svelte  +page.ts
ui/src/routes/about/: +page.svelte
ui/src/routes/admin/: +layout.svelte  +page.svelte  +page.ts
ui/src/routes/admin/r/[admin_room_id]/: +page.svelte
ui/src/routes/admin/r/[code]/: +page.svelte  +page.ts
ui/src/routes/admin/r/[room_id]/: +layout.ts  +page.svelte
ui/src/routes/login/: +page.svelte
ui/src/routes/r/[code]/: +page.svelte  +page.ts
ui/src/routes/r/[code]/search/: +page.svelte  +page.ts
ui/src/routes/r/[room_id]/: +layout.svelte  +page.svelte
ui/src/routes/r/[room_id]/search/: +page.ts
ui/src/routes/scan/: +page.svelte
