[package]
name = "dj-store"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[workspace]
members = [".", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.11", features = ["headers", "ws"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }

rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
jsonwebtoken = { version = "8.3.0", default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.0", features = ["std"] }

rust-embed = { version = "6", features = ["axum"], optional = true}
mime_guess = { version = "2", optional = true}

sea-orm = { version = "0.11.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# deku = "0.15.1"

dotenv = "0.15"
thiserror = "1"
displaydoc = "0.2"
log = "0.4"
tracing-subscriber = "0.3"

deezer-rs = { git = "https://github.com/tsirysndr/deezer-rs" }

entity = { path = "entity" }
migration = { path = "migration" }


[features]
default = ["embed-ui"]
embed-ui = ["dep:rust-embed", "dep:mime_guess"]
