[package]
name = "dj-store"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[workspace]
members = [".", "entity", "migration", "deezer-rs", "api-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["headers", "ws"] }
tower = { version = "0.4", features = ["limit", "buffer"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
axum-server = { version = "0.5", default-features = false, features = ["tls-rustls"], optional = true}

rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
jsonwebtoken = { version = "8.3.0", default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.0", features = ["std"] }

rust-embed = { version = "6", features = ["mime-guess"], optional = true}

sea-orm = { version = "0.11.0", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# deku = "0.15.1"

dotenvy = "0.15"
displaydoc = "0.2"
thiserror = "1.0"
log = "0.4"
tracing-subscriber = "0.3"

deezer-rs = { path = "deezer-rs" }

entity = { path = "entity" }
migration = { path = "migration" }
api-macro = { path = "api-macro" }

[features]
default = ["embed-ui"]
embed-ui = ["dep:rust-embed"]
https = ["dep:axum-server"]

# TODO: fix caching with cargo-chef when optimizing
# or not cache for docker build
# [profile.release]
# strip = true
# lto = true
# codegen-units = 1
